--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.36",
     "react": "^18.3.1",
     "react-click-n-hold": "^1.0.7",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "retro-react": "^1.3.11"
+    "retro-react": "^1.3.11",
+    "spline": "^0.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
