--- a/package.json
+++ b/package.json
@@ -10,17 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.36",
+    "@types/styled-components": "^5.1.34",
+    "@types/three": "^0.170.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "react": "^18.3.1",
     "react-click-n-hold": "^1.0.7",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "retro-react": "^1.3.11",
-    "spline": "^0.0.0"
+    "spline": "^0.0.0",
+    "styled-components": "^6.1.13",
+    "three": "^0.170.0",
+    "three-gpu-pathtracer": "^0.0.23",
+    "twin.macro": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/node": "^22.9.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -30,9 +42,14 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
