--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,11 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ], 
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "three-loaders": ["src/loaders/three-loaders.d.ts"]
+    }
+  }
 }
