--- a/package.json
+++ b/package.json
@@ -12,17 +12,25 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@gsap/react": "^2.1.2",
+    "@material-tailwind/react": "^2.1.10",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.36",
+    "@tailwindcss/vite": "^4.1.16",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.6",
     "@types/styled-components": "^5.1.34",
     "@types/three": "^0.170.0",
     "babel-plugin-styled-components": "^2.1.4",
-    "react": "^18.3.1",
+    "gsap": "^3.13.0",
+    "react": "^18.2.0",
     "react-click-n-hold": "^1.0.7",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.2",
     "retro-react": "^1.3.11",
     "spline": "^0.0.0",
     "styled-components": "^6.1.13",
@@ -33,8 +41,6 @@
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/node": "^22.9.1",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
@@ -42,10 +48,10 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "vite": "^6.4.1"
   },
   "babelMacros": {
     "twin": {
